--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 dnspython==2.2.1
+email-validator==1.2.1
 fastapi==0.79.0
 h11==0.13.0
 httptools==0.4.0
