--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with unittest
-      run: |
-        python tests.py
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.8.0
+    - name: Run tests 
+      run: python3 tests.py
