--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,5 +40,7 @@ jobs:
         mongodb-username: supercharge
         mongodb-password: FISHTRAK2DEPLOYSECRET
         mongodb-db: FishTrak
+    - name: Start program
+      run: main.py
     - name: Run tests 
       run: python3 tests.py
